# mwutils

./: CMakeLists.txt  README.md  mod.json
deprecated/: deletedplayers.h
src/: main.cpp
src/classes/: mwDrawNode.h
src/utils/: domba.h  fixcrashes.h  marker.h  noEffects.h  snap.h
